[gd_scene load_steps=7 format=1]

[ext_resource path="res://scripts/Rockwall.gd" type="Script" id=1]
[ext_resource path="res://Textures/rockwall.png" type="Texture" id=2]
[ext_resource path="res://scripts/robotSensor.gd" type="Script" id=3]
[ext_resource path="res://Scenes/defense boundary.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 0, 0 )
b = Vector2( 0, 10 )

[node name="Rockwall" type="Node2D" groups=[
"resettable",
]]

script/script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]

process_mode = 1
wait_time = 0.25
one_shot = true
autostart = false

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( -31.7642, -31.94 )
transform/scale = Vector2( 0.496806, 0.496806 )
z/z = 1
z/relative = false
texture = ExtResource( 2 )
centered = false

[node name="collision1" type="StaticBody2D" parent="." groups=[
"robot sensor",
]]

editor/display_folded = true
z/z = 2
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1.07346, 0, 0, 3.18751, 0.127888, -0.300769 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision1"]

transform/pos = Vector2( 0.127888, -0.300769 )
transform/scale = Vector2( 1.07346, 3.18751 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="collision2" type="StaticBody2D" parent="." groups=[
"robot sensor",
]]

editor/display_folded = true
z/z = 2
input/pickable = false
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 6.41396, 0, -32.5033 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script/script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="collision2"]

transform/pos = Vector2( 0, -32.5033 )
transform/scale = Vector2( 1, 6.41396 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="defense boundary" parent="." instance=ExtResource( 4 )]

[connection signal="robot_entered" from="collision1" to="." method="_on_collision1_robot_entered"]

[connection signal="robot_entered" from="collision2" to="." method="_on_collision2_robot_entered"]


